# rust-top-audit

./: Cargo.toml  README.md  README_TEMPLATE.md  add_top_crates.sh  perform_audit.sh
.github/workflows/: rust-top-dependency-audit.yml
audits/: README.md
