[package]
name = "rust-top-audit"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.39"
rand = "0.7.3"
quote = "1.0.7"
unicode-xid = "0.2.1"
proc-macro2 = "1.0.19"
rand_core = "0.5.1"
autocfg = "1.0.1"
libc = "0.2.76"
base64 = "0.12.3"
serde = "1.0.115"
log = "0.4.11"
num-traits = "0.2.12"
rand_chacha = "0.2.2"
smallvec = "1.4.2"
lazy_static = "1.4.0"
serde_derive = "1.0.115"
serde_json = "1.0.57"
cfg-if = "0.1.10"
cc = "1.0.59"
bitflags = "1.2.1"
version_check = "0.9.2"
time = "0.2.17"
byteorder = "1.3.4"
regex-syntax = "0.6.18"
itoa = "0.4.6"
regex = "1.3.9"
ryu = "1.0.5"
memchr = "2.3.3"
aho-corasick = "0.7.13"
percent-encoding = "2.1.0"
bytes = "0.5.6"
url = "2.1.1"
num-integer = "0.1.43"
parking_lot_core = "0.8.0"
num_cpus = "1.13.0"
crossbeam-utils = "0.7.2"
parking_lot = "0.11.0"
idna = "0.2.0"
thread_local = "1.0.1"
indexmap = "1.5.2"
scopeguard = "1.1.0"
futures = "0.3.5"
unicode-width = "0.1.8"
ppv-lite86 = "0.2.9"
atty = "0.2.14"
fnv = "1.0.7"
chrono = "0.4.15"
winapi = "0.3.9"
tokio = "0.2.22"
generic-array = "0.14.4"
either = "1.6.0"
strsim = "0.10.0"
unicode-normalization = "0.1.13"
getrandom = "0.1.14"
semver = "0.10.0"
clap = "2.33.3"
slab = "0.4.2"
miniz_oxide = "0.4.1"
lock_api = "0.4.1"
backtrace = "0.3.50"
mio = "0.7.0"
pkg-config = "0.3.18"
proc-macro-hack = "0.5.18"
ansi_term = "0.12.1"
semver-parser = "0.9.0"
itertools = "0.9.0"
once_cell = "1.4.1"
http = "0.2.1"
net2 = "0.2.34"
hyper = "0.13.7"
matches = "0.1.8"
vec_map = "0.8.2"
digest = "0.9.0"
unicode-bidi = "0.3.4"
crossbeam-queue = "0.2.3"
textwrap = "0.12.1"
memoffset = "0.5.5"
iovec = "0.1.4"
rustc-demangle = "0.1.16"
rand_hc = "0.2.0"
typenum = "1.12.0"
block-buffer = "0.9.0"
h2 = "0.2.6"
env_logger = "0.7.1"
pin-project = "0.4.23"
pin-project-internal = "0.4.23"
crossbeam-epoch = "0.8.2"
futures-core = "0.3.5"
rustc_version = "0.2.3"
unicase = "2.6.0"
opaque-debug = "0.3.0"
crossbeam-deque = "0.7.3"
rand_pcg = "0.2.1"
futures-util = "0.3.5"
futures-task = "0.3.5"
maybe-uninit = "2.0.0"
pin-utils = "0.1.0"
futures-channel = "0.3.5"
futures-sink = "0.3.5"
quick-error = "2.0.0"
synstructure = "0.12.4"
toml = "0.5.6"
futures-io = "0.3.5"
dtoa = "0.4.6"
want = "0.3.0"
pin-project-lite = "0.1.7"
mime = "0.3.16"
arrayvec = "0.5.1"
tokio-util = "0.3.1"
remove_dir_all = "0.6.0"
http-body = "0.3.1"
termcolor = "1.1.0"
httparse = "1.3.4"
proc-macro-nested = "0.1.6"
humantime = "2.0.1"
socket2 = "0.3.12"
futures-macro = "0.3.5"
byte-tools = "0.3.1"
same-file = "1.0.6"
linked-hash-map = "0.5.3"
walkdir = "2.3.1"
unicode-segmentation = "1.6.0"
futures-executor = "0.3.5"
crc32fast = "1.2.0"
flate2 = "1.0.17"
dirs = "3.0.1"
openssl-sys = "0.9.58"
serde_urlencoded = "0.6.1"
uuid = "0.8.1"
failure = "0.1.8"
try-lock = "0.2.3"
gimli = "0.22.0"
hex = "0.4.2"
object = "0.21.1"
block-padding = "0.2.1"
thiserror = "1.0.20"
thiserror-impl = "1.0.20"
mime_guess = "2.0.3"
addr2line = "0.13.0"
glob = "0.3.0"
heck = "0.3.1"
hashbrown = "0.8.2"
fake-simd = "0.1.2"
tempfile = "3.1.0"
nom = "5.1.2"
failure_derive = "0.1.8"
openssl = "0.10.30"
arc-swap = "0.4.7"
rand_xorshift = "0.2.0"
adler32 = "1.2.0"
encoding_rs = "0.8.24"
rayon = "1.4.0"
crossbeam-channel = "0.4.3"
rayon-core = "1.8.0"
sha2 = "0.9.1"
foreign-types = "0.5.0"
mio-uds = "0.6.8"
foreign-types-shared = "0.3.0"
tower-service = "0.3.0"
anyhow = "1.0.32"
openssl-probe = "0.1.2"
proc-macro-error = "1.0.4"
error-chain = "0.12.4"
subtle = "2.2.3"
bstr = "0.2.13"
reqwest = "0.10.8"
nix = "0.18.0"
native-tls = "0.2.4"
tinyvec = "1.0.0"
void = "1.0.2"
dirs-sys = "0.3.5"
proc-macro-error-attr = "1.0.4"
hyper-tls = "0.4.3"
rand_os = "0.2.2"
rand_isaac = "0.2.0"
num-bigint = "0.3.0"
miow = "0.3.5"
tokio-macros = "0.2.5"
structopt-derive = "0.4.10"
spin = "0.5.2"
structopt = "0.3.17"
sha-1 = "0.9.1"
yaml-rust = "0.4.4"
rand_jitter = "0.2.0"
signal-hook-registry = "1.2.1"
winapi-x86_64-pc-windows-gnu = "0.4.0"
tracing = "0.1.19"
regex-automata = "0.1.9"
adler = "0.2.3"
tracing-core = "0.1.15"
async-trait = "0.1.40"
winapi-i686-pc-windows-gnu = "0.4.0"
scoped-tls = "1.0.0"
hermit-abi = "0.1.15"
winapi-util = "0.1.5"
crypto-mac = "0.9.1"
siphasher = "0.3.3"
redox_syscall = "0.2.1"
ring = "0.16.15"
which = "4.0.2"
num-rational = "0.3.0"
wasi = "0.10.0"
untrusted = "0.7.1"
filetime = "0.2.12"
tokio-tls = "0.3.1"
wasm-bindgen = "0.2.67"
static_assertions = "1.1.0"
wasm-bindgen-macro = "0.2.67"
wasm-bindgen-backend = "0.2.67"
wasm-bindgen-macro-support = "0.2.67"
phf_shared = "0.8.0"
bumpalo = "3.4.0"
wasm-bindgen-shared = "0.2.67"
lazycell = "1.3.0"
tokio-executor = "0.1.10"
tokio-timer = "0.2.13"
tokio-io = "0.1.13"
syn-mid = "0.5.0"
stable_deref_trait = "1.2.0"
hmac = "0.9.0"
js-sys = "0.3.44"
derive_more = "0.99.9"
tokio-sync = "0.1.8"
num-iter = "0.1.41"
kernel32-sys = "0.2.2"
winapi-build = "0.1.1"
csv = "1.1.3"
tokio-reactor = "0.1.12"
web-sys = "0.3.44"
cloudabi = "0.1.0"
phf = "0.8.0"
petgraph = "0.5.1"
csv-core = "0.1.10"
maplit = "1.0.2"
libz-sys = "1.1.1"
fixedbitset = "0.3.1"
backtrace-sys = "0.1.37"
tokio-tcp = "0.1.4"
term = "0.6.1"
phf_generator = "0.8.0"
tokio-threadpool = "0.1.18"
libloading = "0.6.3"
tokio-current-thread = "0.1.7"
jobserver = "0.1.21"
rustls = "0.18.1"
nodrop = "0.1.14"
num-complex = "0.3.0"
core-foundation-sys = "0.8.0"
ws2_32-sys = "0.2.1"
core-foundation = "0.9.0"
ahash = "0.4.4"
serde_yaml = "0.8.13"
tracing-attributes = "0.1.11"
zeroize = "1.1.0"
safemem = "0.3.3"
vcpkg = "0.2.10"
webpki = "0.21.3"
schannel = "0.1.19"
constant_time_eq = "0.1.5"
instant = "0.1.6"
difference = "2.0.0"
shlex = "0.1.1"
sct = "0.6.0"
lru-cache = "0.1.2"
rustc-hash = "1.1.0"
arrayref = "0.3.6"
bincode = "1.3.1"
fuchsia-zircon-sys = "0.3.3"
fuchsia-zircon = "0.3.3"
phf_codegen = "0.8.0"
bit-vec = "0.6.2"
cookie = "0.14.2"
pest = "2.1.3"
security-framework = "2.0.0"
num = "0.3.0"
hostname = "0.3.1"
webpki-roots = "0.20.0"
tokio-rustls = "0.14.1"
tokio-uds = "0.2.7"
wasm-bindgen-futures = "0.4.17"
ucd-trie = "0.1.3"
sha1 = "0.6.0"
lexical-core = "0.7.4"
criterion = "0.3.3"
tokio-codec = "0.1.2"
pest_generator = "2.1.3"
memmap = "0.7.0"
criterion-plot = "0.4.3"
winreg = "0.7.0"
futures-cpupool = "0.1.8"
security-framework-sys = "2.0.0"
colored = "2.0.0"
language-tags = "0.2.2"
pest_meta = "2.1.3"
pest_derive = "2.1.0"
bindgen = "0.55.1"
string = "0.2.1"
threadpool = "1.8.1"
xml-rs = "0.8.3"
tokio-udp = "0.1.6"
ordered-float = "2.0.0"
tokio-fs = "0.1.7"
md5 = "0.7.0"
cast = "0.2.3"
tinytemplate = "1.1.0"
fuchsia-cprng = "0.1.1"
rdrand = "0.7.0"
fxhash = "0.2.1"
clang-sys = "1.0.0"
doc-comment = "0.3.3"
oorandom = "11.1.2"
owning_ref = "0.4.1"
crossbeam = "0.7.3"
cexpr = "0.4.0"
tar = "0.4.30"
tokio-buf = "0.1.1"
plotters = "0.2.15"
globset = "0.4.5"
console = "0.12.0"
libgit2-sys = "0.12.12"
utf-8 = "0.7.5"
strum_macros = "0.19.2"
git2 = "0.13.10"
getopts = "0.2.21"
blake2b_simd = "0.5.10"
peeking_take_while = "0.1.2"
cargo_metadata = "0.11.1"
strum = "0.19.2"
mio-extras = "2.0.6"
derivative = "2.1.1"
cmake = "0.1.44"
redox_users = "0.3.5"
trust-dns-proto = "0.19.5"
futures-timer = "3.0.2"
const-random = "0.1.8"
const-random-macro = "0.1.8"
multimap = "0.8.2"
approx = "0.3.2"
ctor = "0.1.15"
time-macros-impl = "0.1.1"
match_cfg = "0.1.0"
async-task = "3.0.0"
time-macros = "0.1.0"
utf8-ranges = "1.0.4"
standback = "0.2.10"
pretty_assertions = "0.6.1"
tracing-subscriber = "0.2.11"
proc-macro-crate = "0.1.5"
trust-dns-resolver = "0.19.5"
prost-derive = "0.6.1"
prost = "0.6.1"
rust-argon2 = "0.8.2"
data-encoding = "2.3.0"
hyper-rustls = "0.21.0"
mio-named-pipes = "0.1.7"
rustc-serialize = "0.3.24"
aes-soft = "0.5.0"
tracing-futures = "0.2.4"
enum-as-inner = "0.3.3"
pulldown-cmark = "0.8.0"
prost-types = "0.6.1"
termios = "0.3.2"
c2-chacha = "0.2.4"
half = "1.6.0"
prost-build = "0.6.1"
signal-hook = "0.1.16"
resolv-conf = "0.6.3"
xattr = "0.2.2"
tempdir = "0.3.7"
async-std = "1.6.3"
bit-set = "0.5.2"
paste = "1.0.0"
deflate = "0.8.6"
matchers = "0.0.1"
kv-log-macro = "1.0.7"
gcc = "0.3.55"
synom = "0.11.3"
traitobject = "0.1.0"
darling = "0.10.2"
darling_core = "0.10.2"
darling_macro = "0.10.2"
wait-timeout = "0.2.0"
png = "0.16.7"
paste-impl = "0.1.18"
publicsuffix = "1.5.4"
protobuf = "2.17.0"
curl-sys = "0.4.36"
ipnet = "2.3.0"
serde_cbor = "0.11.1"
utf8parse = "0.2.0"
fallible-iterator = "0.2.0"
handlebars = "3.4.0"
copyless = "0.1.5"
ident_case = "1.0.1"
aes = "0.5.0"
tracing-log = "0.1.1"
take_mut = "0.2.2"
sized-chunks = "0.6.2"
notify = "4.0.15"
sharded-slab = "0.0.9"
dotenv = "0.15.0"
image = "0.23.9"
parking = "2.0.0"
try_from = "0.3.2"
cpuid-bool = "0.1.2"
curl = "0.4.33"
unreachable = "1.0.0"
inotify = "0.8.3"
libssh2-sys = "0.2.19"
urlencoding = "1.1.1"
num-derive = "0.3.2"
crc = "1.8.1"
rustversion = "1.0.3"
ascii = "1.0.0"
pem = "0.8.1"
string_cache = "0.8.0"
build_const = "0.2.1"
new_debug_unreachable = "1.0.4"
zip = "0.5.6"
precomputed-hash = "0.1.1"
tungstenite = "0.11.1"
terminal_size = "0.1.13"
cookie_store = "0.12.0"
pretty_env_logger = "0.4.0"
quickcheck = "0.9.2"
tower-layer = "0.3.0"
home = "0.5.3"
input_buffer = "0.3.1"
ignore = "0.4.16"
inotify-sys = "0.1.3"
podio = "0.2.0"
encode_unicode = "0.3.6"
rand_xoshiro = "0.4.0"
crunchy = "0.2.2"
actix-threadpool = "0.3.3"
headers = "0.3.2"
curve25519-dalek = "3.0.0"
headers-core = "0.2.0"
scoped_threadpool = "0.1.9"
actix-rt = "1.1.1"
block-cipher-trait = "0.7.0"
smol = "0.4.3"
twoway = "0.2.1"
fs_extra = "1.2.0"
tracing-serde = "0.1.1"
combine = "4.3.1"
rusttype = "0.9.2"
blocking = "0.6.1"
prometheus = "0.10.0"
tiny-keccak = "2.0.2"
md-5 = "0.9.1"
aead = "0.3.2"
string_cache_codegen = "0.5.1"
ucd-util = "0.1.8"
fastrand = "1.3.5"
zeroize_derive = "1.0.0"
concurrent-queue = "1.2.2"
universal-hash = "0.4.0"
cache-padded = "1.1.1"
directories = "3.0.1"
libflate = "1.0.2"
bytemuck = "1.4.0"
openssl-src = "111.10.2"
quick-xml = "0.18.1"
async-stream = "0.3.0"
async-stream-impl = "0.3.0"
actix-service = "1.0.6"
actix-connect = "2.0.0"
rustls-native-certs = "0.4.0"
waker-fn = "1.1.0"
jpeg-decoder = "0.1.20"
actix-utils = "2.0.0"
ct-logs = "0.7.0"
actix-http = "1.0.1"
tower-util = "0.3.1"
actix-codec = "0.3.0"
libsqlite3-sys = "0.20.0"
sha3 = "0.9.1"
polyval = "0.4.0"
actix-web = "2.0.0"
aes-gcm = "0.6.0"
ghash = "0.3.0"
brotli-sys = "0.3.2"
brotli2 = "0.3.2"
keccak = "0.1.0"
tower-limit = "0.3.1"
lru = "0.6.0"
slog = "2.5.2"
serde_repr = "0.1.6"
warp = "0.2.5"
tower = "0.3.1"
tower-discover = "0.3.0"
tower-timeout = "0.3.0"
tower-buffer = "0.3.0"
tower-load-shed = "0.3.0"
tower-retry = "0.3.0"
actix-macros = "0.1.2"
actix-server = "1.0.3"
zstd-sys = "1.4.17"
tokio-signal = "0.2.9"
send_wrapper = "0.4.0"
widestring = "0.4.2"
actix-web-codegen = "0.2.2"
buf_redux = "0.8.4"
float-cmp = "0.8.0"
priority-queue = "1.0.0"
libm = "0.2.1"
actix-testing = "1.0.1"
actix-router = "0.2.4"
awc = "1.0.1"
rle-decode-fast = "1.0.1"
serde_bytes = "0.11.5"
output_vt100 = "0.1.2"
ctrlc = "3.1.6"
bzip2-sys = "0.1.9"
stream-cipher = "0.7.1"
rawpointer = "0.2.1"
gif = "0.10.3"
scheduled-thread-pool = "0.2.5"
multipart = "0.17.0"
bytecount = "0.6.0"
simplelog = "0.8.0"
ed25519-dalek = "1.0.0"
lzw = "0.10.0"
fs2 = "0.4.3"
json = "0.12.4"
r2d2 = "0.8.9"
tiff = "0.5.0"
color_quant = "1.0.1"
bzip2 = "0.4.1"
downcast-rs = "1.2.0"
jsonrpc-core = "14.2.0"
serde-value = "0.7.0"
tokio-openssl = "0.4.0"
matrixmultiply = "0.2.3"
erased-serde = "0.3.12"
im = "15.0.0"
pbkdf2 = "0.5.0"
bytestring = "0.1.5"
typeable = "0.1.2"
tokio-tungstenite = "0.11.0"
bitmaps = "2.1.0"
actix-tls = "1.0.0"
bytesize = "1.0.1"
wasmparser = "0.62.0"
errno = "0.2.6"
diesel = "1.4.5"
number_prefix = "0.4.0"
term_size = "0.3.2"
stringprep = "0.1.2"
rusoto_credential = "0.45.0"
rusoto_core = "0.45.0"
libnghttp2-sys = "0.1.4"
clear_on_drop = "0.2.4"
shell-escape = "0.1.5"
ena = "0.14.0"
vte = "0.8.0"
diesel_derives = "1.4.1"
predicates = "1.0.5"
diff = "0.1.12"
encoding = "0.2.33"
jemalloc-sys = "0.3.2"
indicatif = "0.15.0"
encoding-index-simpchinese = "1.20141219.5"
encoding-index-korean = "1.20141219.5"
encoding-index-japanese = "1.20141219.5"
encoding-index-tradchinese = "1.20141219.5"
encoding-index-singlebyte = "1.20141219.5"
encoding_index_tests = "0.1.4"
tendril = "0.4.1"
gloo-timers = "0.2.1"
annotate-snippets = "0.9.0"
thread-id = "3.3.0"
console_error_panic_hook = "0.1.6"
futf = "0.1.4"
mac = "0.1.1"
zstd-safe = "2.0.5"
ghost = "0.1.2"
proptest = "0.10.1"
serde_test = "1.0.115"
aesni = "0.9.0"
predicates-core = "1.0.0"
twox-hash = "1.5.0"
markup5ever = "0.10.0"
predicates-tree = "1.0.0"
zstd = "0.5.3"
treeline = "0.1.0"
unsafe-any = "0.4.2"
tower-load = "0.3.0"
html5ever = "0.25.1"
num_enum = "0.5.1"
typemap = "0.3.3"
num_enum_derive = "0.5.1"
hkdf = "0.9.0"
unsigned-varint = "0.5.0"
xdg = "2.2.0"
inventory = "0.1.8"
inventory-impl = "0.1.8"
blake2 = "0.9.0"
rusty-fork = "0.3.0"
loom = "0.3.5"
compiler_builtins = "0.1.35"
rustc-hex = "2.1.0"
bitvec = "0.18.1"
yansi = "0.5.0"
tower-make = "0.3.0"
simple_asn1 = "0.4.1"
rusoto_signature = "0.45.0"
serde_ignored = "0.1.2"
uint = "0.8.5"
strip-ansi-escapes = "0.1.0"
seahash = "4.0.1"
slog-scope = "4.3.0"
wayland-sys = "0.27.0"
lzma-sys = "0.1.16"
clicolors-control = "1.0.1"
rust-ini = "0.15.3"
opener = "0.4.1"
antidote = "1.0.0"
rpassword = "5.0.0"
impl-serde = "0.3.1"
tokio-service = "0.1.0"
jsonwebtoken = "7.2.0"
xz2 = "0.1.6"
gl_generator = "0.14.0"
tonic = "0.3.1"
derive_builder = "0.9.0"
derive_builder_core = "0.9.0"
tower-ready-cache = "0.3.1"
slog-term = "2.6.0"
config = "0.10.1"
stdweb = "0.4.20"
bs58 = "0.3.1"
rustyline = "6.2.0"
tonic-build = "0.3.1"
event-listener = "2.4.0"
tower-balance = "0.3.0"
base-x = "0.2.6"
wayland-client = "0.27.0"
wayland-scanner = "0.27.0"
generator = "0.6.21"
raw-window-handle = "0.3.3"
fixed-hash = "0.6.1"
radium = "0.3.0"
open = "1.4.0"
wayland-protocols = "0.27.0"
wasm-bindgen-test = "0.3.17"
wayland-commons = "0.27.0"
block-cipher = "0.8.0"
async-compression = "0.3.5"
assert_cmd = "1.0.1"
wasm-bindgen-test-macro = "0.3.17"
snafu = "0.6.8"
snafu-derive = "0.6.8"
winit = "0.22.2"
vergen = "3.1.0"
slog-async = "2.5.0"
if_chain = "1.0.0"
async-channel = "1.4.1"
rustfix = "0.5.1"
typed-arena = "2.0.1"
psm = "0.1.11"
stacker = "0.1.11"
dashmap = "3.11.10"
scroll_derive = "0.10.2"
trybuild = "1.0.33"
blake2-rfc = "0.2.18"
mach = "0.3.2"
jsonrpc-server-utils = "14.2.0"
string_cache_shared = "0.3.0"
futures-lite = "1.0.0"
jemallocator = "0.3.2"
derive-new = "0.5.8"
scroll = "0.10.1"
fern = "0.6.0"
anymap = "0.12.1"
jsonrpc-derive = "14.2.1"
parity-wasm = "0.42.1"
jsonrpc-pubsub = "14.2.0"
euclid = "0.22.1"
chunked_transfer = "1.2.0"
inflate = "0.4.5"
byte-slice-cast = "0.3.5"
stb_truetype = "0.3.1"
crypto-hash = "0.3.4"
actix = "0.9.0"
primitive-types = "0.7.2"
platforms = "0.2.1"
ordermap = "0.4.2"
ipnetwork = "0.17.0"
rusqlite = "0.24.0"
ipconfig = "0.2.2"
dlib = "0.4.2"
actix_derive = "0.5.0"
prettytable-rs = "0.8.0"
secp256k1 = "0.19.0"
git2-curl = "0.14.1"
x25519-dalek = "1.1.0"
atomic-waker = "1.0.0"
fallible-streaming-iterator = "0.1.9"
protobuf-codegen = "2.17.0"
sysinfo = "0.15.1"
jsonrpc-client-transports = "14.2.1"
stdweb-internal-macros = "0.2.9"
ref-cast = "1.0.2"
ref-cast-impl = "1.0.2"
termion = "1.5.5"
c_linked_list = "1.1.1"
stdweb-derive = "0.5.3"
stdweb-internal-runtime = "0.1.5"
rusoto_s3 = "0.45.0"
discard = "1.0.4"
jsonrpc-core-client = "14.2.0"
serde-hjson = "0.9.1"
parity-scale-codec = "1.3.4"
fst = "0.4.4"
smithay-client-toolkit = "0.11.0"
postgres-protocol = "0.5.2"
rental = "0.5.5"
rust-crypto = "0.2.36"
wincolor = "1.0.3"
rental-impl = "0.5.5"
unindent = "0.1.6"
goblin = "0.2.3"
line_drawing = "0.8.0"
tokio-core = "0.1.17"
im-rc = "15.0.0"
ctr = "0.5.0"
async-attributes = "1.1.1"
hdrhistogram = "7.1.0"
xcb = "0.9.0"
get_if_addrs = "0.5.3"
bigdecimal = "0.2.0"
humansize = "1.1.0"
dirs-sys-next = "0.1.0"
chalk-ir = "0.25.0"
chalk-derive = "0.25.0"
chalk-solve = "0.25.0"
nalgebra = "0.22.0"
raw-cpuid = "8.1.1"
futures_codec = "0.4.1"
tokio-process = "0.2.5"
pq-sys = "0.4.6"
serde_with_macros = "1.1.0"
rustc-ap-rustc_lexer = "677.0.0"
linked_hash_set = "0.1.4"
tokio-named-pipes = "0.1.0"
andrew = "0.3.0"
parity-multiaddr = "0.9.2"
serde_with = "1.4.0"
x11-dl = "2.18.5"
core-graphics = "0.22.0"
whoami = "0.9.0"
ws = "0.9.1"
unicode-script = "0.5.2"
wast = "23.0.0"
rmp = "0.8.9"
rust_decimal = "1.7.0"
cbindgen = "0.14.4"
aes-ctr = "0.4.0"
parity-tokio-ipc = "0.7.0"
syslog = "5.0.0"
dirs-next = "1.0.1"
dbus = "0.8.4"
migrations_internals = "1.4.1"
leb128 = "0.2.4"
rustc-rayon = "0.3.0"
rustc-rayon-core = "0.3.0"
hex-literal = "0.3.1"
memory_units = "0.4.0"
chrono-tz = "0.5.3"
measureme = "0.7.1"
getset = "0.1.1"
futures-core-preview = "0.2.3"
indoc = "1.0.2"
impl-codec = "0.4.2"
parse-zoneinfo = "0.3.0"
jni-sys = "0.3.0"
plain = "0.2.3"
termize = "0.1.1"
lsp-types = "0.80.0"
snap = "1.0.1"
miniz-sys = "0.1.12"
ntapi = "0.3.4"
rustc_tools_util = "0.2.0"
signature = "1.2.2"
alga = "0.9.3"
cocoa = "0.23.0"
target-lexicon = "0.11.0"
hmac-drbg = "0.3.0"
hex-literal-impl = "0.2.2"
os_info = "2.0.8"
fsevent = "2.0.2"
fsevent-sys = "3.0.2"
unicode_categories = "0.1.1"
lrpc-macros = "1.0.0"
state = "0.4.1"
lrpc = "1.0.0"
simple_logger = "1.9.0"
secrecy = "0.7.0"
log4rs = "0.13.0"
blake2s_simd = "0.5.10"
chalk-engine = "0.25.0"
libsecp256k1 = "0.3.5"
slog-json = "2.3.0"
indoc-impl = "0.3.6"
users = "0.10.0"
log-mdc = "0.1.0"
cargo-lock = "4.0.1"
rls-span = "0.5.2"
brotli-decompressor = "2.3.1"
metrics = "0.12.1"
jsonrpc-ipc-server = "14.2.0"
metrics-core = "0.5.2"
futures-channel-preview = "0.2.2"
deunicode = "1.1.1"
futures-util-preview = "0.2.2"
alloc-no-stdlib = "2.0.1"
multihash = "0.11.4"
migrations_macros = "1.4.2"
docopt = "1.1.0"
ed25519 = "1.0.1"
libflate_lz77 = "1.0.0"
polonius-engine = "0.12.1"
rmp-serde = "0.14.4"
ndarray = "0.13.1"
khronos_api = "3.1.0"
diesel_migrations = "1.4.0"
datafrog = "2.0.1"
tokio-postgres = "0.5.5"
codespan-reporting = "0.9.5"
alloc-stdlib = "0.2.1"
gfx-hal = "0.6.0"
async-tls = "0.9.0"
rls-data = "0.19.0"
rand_distr = "0.3.0"
wepoll-sys-stjepang = "1.0.6"
libdbus-sys = "0.2.1"
objc = "0.2.7"
async-native-tls = "0.3.3"
log_settings = "0.1.2"
slog-stdlog = "4.0.0"
rustc-ap-rustc_errors = "677.0.0"
rustc-ap-rustc_data_structures = "677.0.0"
punycode = "0.4.1"
postgres-types = "0.1.2"
unicode-security = "0.0.5"
tokio-native-tls = "0.1.0"
normalize-line-endings = "0.3.0"
numtoa = "0.2.3"
x11-clipboard = "0.5.1"
x11 = "2.18.2"
rustc-ap-rustc_target = "677.0.0"
wasm-timer = "0.2.5"
hyperx = "1.1.0"
phf_macros = "0.8.0"
dialoguer = "0.6.2"
shell-words = "1.0.0"
malloc_buf = "1.0.0"
ammonia = "3.1.0"
hyper-openssl = "0.8.0"
pear_codegen = "0.1.4"
pear = "0.1.4"
assert_matches = "1.3.0"
smol_str = "0.1.16"
protoc = "2.17.0"
block = "0.1.6"
generational-arena = "0.2.8"
ethbloom = "0.9.2"
rustc-ap-rustc_macros = "677.0.0"
block-modes = "0.6.1"
tera = "1.5.0"
tokio-test = "0.2.1"
unic-char-range = "0.9.0"
unic-char-property = "0.9.0"
unic-common = "0.9.0"
unic-ucd-version = "0.9.0"
redis = "0.17.0"
enum_primitive = "0.1.1"
snow = "0.7.1"
rustc-ap-rustc_index = "677.0.0"
chrono-humanize = "0.0.11"
poly1305 = "0.6.0"
secp256k1-sys = "0.3.0"
rlp = "0.4.5"
rustc-ap-rustc_span = "677.0.0"
rustc-ap-rustc_session = "677.0.0"
rustc-ap-rustc_feature = "677.0.0"
rustc-ap-rustc_fs_util = "677.0.0"
rustc-ap-rustc_parse = "677.0.0"
rustc-ap-rustc_ast_pretty = "677.0.0"
gfx-backend-empty = "0.6.0"
err-derive = "0.2.4"
calloop = "0.6.4"
rustc-ap-rustc_ast = "677.0.0"
libp2p-core = "0.21.0"
xi-unicode = "0.2.1"
tokio-retry = "0.2.0"
mdbook = "0.4.2"
os_str_bytes = "2.3.2"
arbitrary = "0.4.6"
rocket_codegen = "0.4.5"
fancy-regex = "0.3.5"
attohttpc = "0.15.0"
assert_approx_eq = "1.1.0"
hibitset = "0.6.3"
slug = "0.1.4"
sqlformat = "0.1.0"
elasticlunr-rs = "2.3.9"
atom = "0.3.5"
typetag = "0.1.5"
typetag-impl = "0.1.5"
minifier = "0.0.36"
rocket_http = "0.4.5"
macro-utils = "0.1.3"
uname = "0.1.1"
multistream-select = "0.8.2"
soketto = "0.4.2"
nohash-hasher = "0.2.0"
os_pipe = "0.9.2"
yamux = "0.4.9"
asn1_der = "0.7.1"
redox_termios = "0.1.1"
unic-ucd-segment = "0.9.0"
crossterm = "0.17.7"
more-asserts = "0.2.1"
chacha20poly1305 = "0.5.1"
unic-segment = "0.9.0"
assert-json-diff = "1.1.0"
stream-cancel = "0.6.1"
built = "0.4.3"
chacha20 = "0.5.0"
ethereum-types = "0.9.2"
rw-stream-sink = "0.2.1"
ash = "0.31.0"
rocket = "0.4.5"
asn1_der_derive = "0.1.2"
evmap = "10.0.2"
sys-info = "0.7.0"
postgres = "0.17.5"
protoc-rust = "2.17.0"
rustc-ap-rustc_attr = "677.0.0"
rustc-ap-rustc_ast_passes = "677.0.0"
rustc-ap-rustc_expand = "677.0.0"
tower-test = "0.3.0"
bson = "1.1.0"
rusoto_sts = "0.45.0"
debugid = "0.7.2"
impl-rlp = "0.2.1"
lexical = "5.2.0"
color-backtrace = "0.4.2"
gfx-backend-vulkan = "0.6.1"
enumset = "1.0.1"
cesu8 = "1.1.0"
android_log-sys = "0.2.0"
compiletest_rs = "0.5.0"
quanta = "0.6.4"
devise = "0.2.0"
httpdate = "0.3.2"
devise_core = "0.2.0"
devise_codegen = "0.2.0"
quicksink = "0.1.2"
racer = "2.1.37"
xml5ever = "0.16.1"
globwalk = "0.8.0"
libp2p = "0.24.0"
enumset_derive = "0.5.0"
boxfnonce = "0.1.1"
quine-mc_cluskey = "0.2.4"
ripemd160 = "0.9.1"
pathdiff = "0.2.0"
jni = "0.17.0"
gumdrop_derive = "0.8.0"
gumdrop = "0.8.0"
libp2p-swarm = "0.21.0"
brotli = "3.3.0"
k8s-openapi = "0.9.0"
tiny-bip39 = "0.7.3"
procfs = "0.8.0"
insta = "0.16.1"
libp2p-core-derive = "0.20.2"
scan_fmt = "0.2.5"
exitcode = "1.1.2"
errno-dragonfly = "0.1.1"
rgb = "0.8.25"
byte-unit = "4.0.9"
integer-encoding = "2.0.0"
codespan = "0.9.5"
libp2p-tcp = "0.21.0"
tiny_http = "0.7.0"
ron = "0.6.1"
glutin = "0.24.1"
pdqselect = "0.1.0"
lyon_geom = "0.16.0"
quickcheck_macros = "0.9.1"
