[package]
name = "rust-top-audit"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.39"
rand = "0.7.3"
quote = "1.0.7"
unicode-xid = "0.2.1"
proc-macro2 = "1.0.20"
rand_core = "0.5.1"
autocfg = "1.0.1"
libc = "0.2.76"
base64 = "0.12.3"
serde = "1.0.115"
log = "0.4.11"
num-traits = "0.2.12"
rand_chacha = "0.2.2"
smallvec = "1.4.2"
lazy_static = "1.4.0"
serde_derive = "1.0.115"
serde_json = "1.0.57"
cfg-if = "0.1.10"
cc = "1.0.59"
bitflags = "1.2.1"
version_check = "0.9.2"
time = "0.2.17"
itoa = "0.4.6"
byteorder = "1.3.4"
regex-syntax = "0.6.18"
regex = "1.3.9"
ryu = "1.0.5"
memchr = "2.3.3"
aho-corasick = "0.7.13"
percent-encoding = "2.1.0"
bytes = "0.5.6"
url = "2.1.1"
num-integer = "0.1.43"
parking_lot_core = "0.8.0"
parking_lot = "0.11.0"
num_cpus = "1.13.0"
crossbeam-utils = "0.7.2"
idna = "0.2.0"
thread_local = "1.0.1"
indexmap = "1.6.0"
scopeguard = "1.1.0"
futures = "0.3.5"
unicode-width = "0.1.8"
ppv-lite86 = "0.2.9"
atty = "0.2.14"
chrono = "0.4.15"
fnv = "1.0.7"
winapi = "0.3.9"
tokio = "0.2.22"
generic-array = "0.14.4"
strsim = "0.10.0"
either = "1.6.0"
getrandom = "0.1.14"
clap = "2.33.3"
unicode-normalization = "0.1.13"
miniz_oxide = "0.4.1"
semver = "0.10.0"
slab = "0.4.2"
lock_api = "0.4.1"
backtrace = "0.3.50"
mio = "0.7.0"
proc-macro-hack = "0.5.18"
pkg-config = "0.3.18"
ansi_term = "0.12.1"
once_cell = "1.4.1"
itertools = "0.9.0"
semver-parser = "0.9.0"
http = "0.2.1"
net2 = "0.2.34"
hyper = "0.13.7"
matches = "0.1.8"
vec_map = "0.8.2"
digest = "0.9.0"
textwrap = "0.12.1"
unicode-bidi = "0.3.4"
crossbeam-queue = "0.2.3"
memoffset = "0.5.5"
iovec = "0.1.4"
rustc-demangle = "0.1.16"
block-buffer = "0.9.0"
rand_hc = "0.2.0"
typenum = "1.12.0"
h2 = "0.2.6"
env_logger = "0.7.1"
pin-project = "0.4.23"
pin-project-internal = "0.4.23"
crossbeam-epoch = "0.8.2"
opaque-debug = "0.3.0"
futures-core = "0.3.5"
unicase = "2.6.0"
rustc_version = "0.2.3"
futures-util = "0.3.5"
futures-task = "0.3.5"
rand_pcg = "0.2.1"
crossbeam-deque = "0.7.3"
pin-utils = "0.1.0"
quick-error = "2.0.0"
maybe-uninit = "2.0.0"
futures-channel = "0.3.5"
futures-sink = "0.3.5"
synstructure = "0.12.4"
toml = "0.5.6"
futures-io = "0.3.5"
dtoa = "0.4.6"
want = "0.3.0"
pin-project-lite = "0.1.7"
mime = "0.3.16"
remove_dir_all = "0.6.0"
arrayvec = "0.5.1"
tokio-util = "0.3.1"
termcolor = "1.1.0"
http-body = "0.3.1"
httparse = "1.3.4"
proc-macro-nested = "0.1.6"
humantime = "2.0.1"
futures-macro = "0.3.5"
socket2 = "0.3.12"
byte-tools = "0.3.1"
unicode-segmentation = "1.6.0"
linked-hash-map = "0.5.3"
same-file = "1.0.6"
walkdir = "2.3.1"
futures-executor = "0.3.5"
crc32fast = "1.2.0"
flate2 = "1.0.17"
uuid = "0.8.1"
dirs = "3.0.1"
openssl-sys = "0.9.58"
serde_urlencoded = "0.7.0"
failure = "0.1.8"
gimli = "0.22.0"
try-lock = "0.2.3"
hex = "0.4.2"
object = "0.21.1"
hashbrown = "0.9.0"
block-padding = "0.2.1"
thiserror = "1.0.20"
thiserror-impl = "1.0.20"
heck = "0.3.1"
addr2line = "0.13.0"
mime_guess = "2.0.3"
glob = "0.3.0"
tempfile = "3.1.0"
nom = "5.1.2"
fake-simd = "0.1.2"
openssl = "0.10.30"
failure_derive = "0.1.8"
rand_xorshift = "0.2.0"
arc-swap = "0.4.7"
encoding_rs = "0.8.24"
crossbeam-channel = "0.4.3"
rayon = "1.4.0"
adler32 = "1.2.0"
rayon-core = "1.8.0"
sha2 = "0.9.1"
foreign-types = "0.5.0"
foreign-types-shared = "0.3.0"
mio-uds = "0.6.8"
anyhow = "1.0.32"
tower-service = "0.3.0"
openssl-probe = "0.1.2"
proc-macro-error = "1.0.4"
subtle = "2.2.3"
error-chain = "0.12.4"
tinyvec = "1.0.0"
reqwest = "0.10.8"
bstr = "0.2.13"
nix = "0.18.0"
native-tls = "0.2.4"
void = "1.0.2"
proc-macro-error-attr = "1.0.4"
dirs-sys = "0.3.5"
hyper-tls = "0.4.3"
rand_os = "0.2.2"
num-bigint = "0.3.0"
rand_isaac = "0.2.0"
miow = "0.3.5"
tokio-macros = "0.2.5"
adler = "0.2.3"
structopt-derive = "0.4.10"
spin = "0.5.2"
structopt = "0.3.17"
tracing = "0.1.19"
sha-1 = "0.9.1"
tracing-core = "0.1.15"
yaml-rust = "0.4.4"
signal-hook-registry = "1.2.1"
rand_jitter = "0.2.0"
regex-automata = "0.1.9"
winapi-x86_64-pc-windows-gnu = "0.4.0"
async-trait = "0.1.40"
scoped-tls = "1.0.0"
winapi-i686-pc-windows-gnu = "0.4.0"
hermit-abi = "0.1.15"
winapi-util = "0.1.5"
crypto-mac = "0.9.1"
which = "4.0.2"
siphasher = "0.3.3"
redox_syscall = "0.2.1"
ring = "0.16.15"
num-rational = "0.3.0"
wasi = "0.10.0"
untrusted = "0.7.1"
filetime = "0.2.12"
tokio-tls = "0.3.1"
wasm-bindgen = "0.2.67"
static_assertions = "1.1.0"
wasm-bindgen-macro = "0.2.67"
wasm-bindgen-backend = "0.2.67"
wasm-bindgen-macro-support = "0.2.67"
phf_shared = "0.8.0"
lazycell = "1.3.0"
wasm-bindgen-shared = "0.2.67"
bumpalo = "3.4.0"
tokio-executor = "0.1.10"
tokio-timer = "0.2.13"
hmac = "0.9.0"
stable_deref_trait = "1.2.0"
tokio-io = "0.1.13"
syn-mid = "0.5.0"
js-sys = "0.3.44"
derive_more = "0.99.9"
tokio-sync = "0.1.8"
num-iter = "0.1.41"
kernel32-sys = "0.2.2"
winapi-build = "0.1.1"
web-sys = "0.3.44"
csv = "1.1.3"
cloudabi = "0.1.0"
csv-core = "0.1.10"
petgraph = "0.5.1"
tokio-reactor = "0.1.12"
fixedbitset = "0.3.1"
phf = "0.8.0"
maplit = "1.0.2"
libz-sys = "1.1.2"
libloading = "0.6.3"
phf_generator = "0.8.0"
term = "0.6.1"
backtrace-sys = "0.1.37"
tokio-tcp = "0.1.4"
tokio-threadpool = "0.1.18"
jobserver = "0.1.21"
rustls = "0.18.1"
tokio-current-thread = "0.1.7"
num-complex = "0.3.0"
core-foundation-sys = "0.8.0"
nodrop = "0.1.14"
ahash = "0.4.4"
ws2_32-sys = "0.2.1"
core-foundation = "0.9.0"
tracing-attributes = "0.1.11"
serde_yaml = "0.8.13"
instant = "0.1.6"
safemem = "0.3.3"
zeroize = "1.1.0"
webpki = "0.21.3"
vcpkg = "0.2.10"
schannel = "0.1.19"
shlex = "0.1.1"
constant_time_eq = "0.1.5"
difference = "2.0.0"
sct = "0.6.0"
rustc-hash = "1.1.0"
lru-cache = "0.1.2"
bincode = "1.3.1"
arrayref = "0.3.6"
fuchsia-zircon-sys = "0.3.3"
fuchsia-zircon = "0.3.3"
bit-vec = "0.6.2"
phf_codegen = "0.8.0"
cookie = "0.14.2"
pest = "2.1.3"
security-framework = "2.0.0"
num = "0.3.0"
hostname = "0.3.1"
webpki-roots = "0.20.0"
tokio-rustls = "0.14.1"
lexical-core = "0.7.4"
wasm-bindgen-futures = "0.4.17"
sha1 = "0.6.0"
ucd-trie = "0.1.3"
tokio-uds = "0.2.7"
criterion = "0.3.3"
pest_generator = "2.1.3"
winreg = "0.7.0"
memmap = "0.7.0"
criterion-plot = "0.4.3"
security-framework-sys = "2.0.0"
tokio-codec = "0.1.2"
language-tags = "0.2.2"
colored = "2.0.0"
pest_meta = "2.1.3"
bindgen = "0.55.1"
pest_derive = "2.1.0"
threadpool = "1.8.1"
futures-cpupool = "0.1.8"
xml-rs = "0.8.3"
ordered-float = "2.0.0"
string = "0.2.1"
md5 = "0.7.0"
cast = "0.2.3"
tokio-udp = "0.1.6"
tokio-fs = "0.1.7"
tinytemplate = "1.1.0"
fuchsia-cprng = "0.1.1"
fxhash = "0.2.1"
rdrand = "0.7.0"
clang-sys = "1.0.0"
oorandom = "11.1.2"
cexpr = "0.4.0"
doc-comment = "0.3.3"
crossbeam = "0.7.3"
tar = "0.4.30"
owning_ref = "0.4.1"
plotters = "0.3.0"
tokio-buf = "0.1.1"
console = "0.12.0"
globset = "0.4.5"
utf-8 = "0.7.5"
strum_macros = "0.19.2"
peeking_take_while = "0.1.2"
libgit2-sys = "0.12.12"
git2 = "0.13.10"
blake2b_simd = "0.5.10"
getopts = "0.2.21"
strum = "0.19.2"
mio-extras = "2.0.6"
derivative = "2.1.1"
cargo_metadata = "0.11.1"
cmake = "0.1.44"
redox_users = "0.3.5"
trust-dns-proto = "0.19.5"
futures-timer = "3.0.2"
const-random = "0.1.8"
const-random-macro = "0.1.8"
time-macros-impl = "0.1.1"
multimap = "0.8.2"
standback = "0.2.10"
time-macros = "0.1.0"
tracing-subscriber = "0.2.11"
ctor = "0.1.15"
match_cfg = "0.1.0"
approx = "0.3.2"
async-task = "3.0.0"
utf8-ranges = "1.0.4"
proc-macro-crate = "0.1.5"
pretty_assertions = "0.6.1"
prost-derive = "0.6.1"
prost = "0.6.1"
trust-dns-resolver = "0.19.5"
rust-argon2 = "0.8.2"
hyper-rustls = "0.21.0"
mio-named-pipes = "0.1.7"
tracing-futures = "0.2.4"
data-encoding = "2.3.0"
aes-soft = "0.5.0"
half = "1.6.0"
rustc-serialize = "0.3.24"
enum-as-inner = "0.3.3"
termios = "0.3.2"
prost-types = "0.6.1"
prost-build = "0.6.1"
pulldown-cmark = "0.8.0"
c2-chacha = "0.2.4"
signal-hook = "0.1.16"
matchers = "0.0.1"
async-std = "1.6.3"
paste = "1.0.0"
tempdir = "0.3.7"
xattr = "0.2.2"
resolv-conf = "0.6.3"
bit-set = "0.5.2"
ipnet = "2.3.0"
deflate = "0.8.6"
kv-log-macro = "1.0.7"
gcc = "0.3.55"
serde_cbor = "0.11.1"
synom = "0.11.3"
protobuf = "2.17.0"
traitobject = "0.1.0"
png = "0.16.7"
wait-timeout = "0.2.0"
paste-impl = "0.1.18"
darling = "0.10.2"
darling_core = "0.10.2"
darling_macro = "0.10.2"
curl-sys = "0.4.36"
publicsuffix = "1.5.4"
cpuid-bool = "0.1.2"
fallible-iterator = "0.2.0"
copyless = "0.1.5"
tracing-log = "0.1.1"
parking = "2.0.0"
utf8parse = "0.2.0"
aes = "0.5.0"
handlebars = "3.4.0"
ident_case = "1.0.1"
sharded-slab = "0.0.9"
sized-chunks = "0.6.2"
notify = "4.0.15"
take_mut = "0.2.2"
dotenv = "0.15.0"
image = "0.23.9"
unreachable = "1.0.0"
curl = "0.4.33"
inotify = "0.8.3"
urlencoding = "1.1.1"
crc = "1.8.1"
num-derive = "0.3.2"
try_from = "0.3.2"
libssh2-sys = "0.2.19"
ascii = "1.0.0"
rustversion = "1.0.3"
pem = "0.8.1"
build_const = "0.2.1"
string_cache = "0.8.0"
new_debug_unreachable = "1.0.4"
zip = "0.5.6"
tungstenite = "0.11.1"
terminal_size = "0.1.13"
precomputed-hash = "0.1.1"
input_buffer = "0.3.1"
quickcheck = "0.9.2"
pretty_env_logger = "0.4.0"
inotify-sys = "0.1.3"
tower-layer = "0.3.0"
ignore = "0.4.16"
cookie_store = "0.12.0"
home = "0.5.3"
podio = "0.2.0"
encode_unicode = "0.3.6"
rand_xoshiro = "0.4.0"
crunchy = "0.2.2"
actix-threadpool = "0.3.3"
curve25519-dalek = "3.0.0"
headers = "0.3.2"
headers-core = "0.2.0"
actix-rt = "1.1.1"
blocking = "0.6.1"
tracing-serde = "0.1.1"
combine = "4.3.1"
scoped_threadpool = "0.1.9"
fastrand = "1.3.5"
twoway = "0.2.1"
prometheus = "0.10.0"
block-cipher-trait = "0.7.0"
fs_extra = "1.2.0"
smol = "0.4.3"
concurrent-queue = "1.2.2"
tiny-keccak = "2.0.2"
rusttype = "0.9.2"
aead = "0.3.2"
cache-padded = "1.1.1"
md-5 = "0.9.1"
string_cache_codegen = "0.5.1"
ucd-util = "0.1.8"
universal-hash = "0.4.0"
zeroize_derive = "1.0.0"
waker-fn = "1.1.0"
bytemuck = "1.4.0"
quick-xml = "0.18.1"
directories = "3.0.1"
openssl-src = "111.10.2"
actix-service = "1.0.6"
libflate = "1.0.2"
actix-connect = "2.0.0"
async-stream = "0.3.0"
async-stream-impl = "0.3.0"
rustls-native-certs = "0.4.0"
actix-utils = "2.0.0"
jpeg-decoder = "0.1.20"
actix-http = "1.0.1"
actix-codec = "0.3.0"
tower-util = "0.3.1"
ct-logs = "0.7.0"
polyval = "0.4.0"
actix-web = "2.0.0"
libsqlite3-sys = "0.20.0"
aes-gcm = "0.6.0"
ghash = "0.3.0"
brotli-sys = "0.3.2"
brotli2 = "0.3.2"
sha3 = "0.9.1"
tower-limit = "0.3.1"
lru = "0.6.0"
serde_repr = "0.1.6"
warp = "0.2.5"
keccak = "0.1.0"
slog = "2.5.2"
tower = "0.3.1"
tower-timeout = "0.3.0"
tower-discover = "0.3.0"
tower-buffer = "0.3.0"
tower-load-shed = "0.3.0"
tower-retry = "0.3.0"
actix-macros = "0.1.2"
actix-server = "1.0.3"
zstd-sys = "1.4.17"
priority-queue = "1.0.0"
float-cmp = "0.8.0"
actix-web-codegen = "0.2.2"
widestring = "0.4.2"
buf_redux = "0.8.4"
send_wrapper = "0.4.0"
libm = "0.2.1"
awc = "1.0.1"
actix-router = "0.2.4"
actix-testing = "1.0.1"
serde_bytes = "0.11.5"
rawpointer = "0.2.1"
bzip2-sys = "0.1.9"
ctrlc = "3.1.6"
tokio-signal = "0.2.9"
rle-decode-fast = "1.0.1"
stream-cipher = "0.7.1"
output_vt100 = "0.1.2"
multipart = "0.17.0"
scheduled-thread-pool = "0.2.5"
gif = "0.10.3"
fs2 = "0.4.3"
ed25519-dalek = "1.0.0"
simplelog = "0.8.0"
lzw = "0.10.0"
bytecount = "0.6.0"
r2d2 = "0.8.9"
json = "0.12.4"
tiff = "0.5.0"
bzip2 = "0.4.1"
color_quant = "1.0.1"
downcast-rs = "1.2.0"
matrixmultiply = "0.2.3"
serde-value = "0.7.0"
tokio-openssl = "0.4.0"
erased-serde = "0.3.12"
im = "15.0.0"
bytestring = "0.1.5"
tokio-tungstenite = "0.11.0"
jsonrpc-core = "14.2.0"
bitmaps = "2.1.0"
typeable = "0.1.2"
actix-tls = "1.0.0"
pbkdf2 = "0.5.0"
number_prefix = "0.4.0"
errno = "0.2.6"
diesel = "1.4.5"
wasmparser = "0.62.0"
bytesize = "1.0.1"
stringprep = "0.1.2"
rusoto_credential = "0.45.0"
term_size = "0.3.2"
rusoto_core = "0.45.0"
libnghttp2-sys = "0.1.4"
shell-escape = "0.1.5"
indicatif = "0.15.0"
diesel_derives = "1.4.1"
vte = "0.8.0"
predicates = "1.0.5"
gloo-timers = "0.2.1"
jemalloc-sys = "0.3.2"
encoding = "0.2.33"
encoding-index-simpchinese = "1.20141219.5"
encoding-index-korean = "1.20141219.5"
encoding-index-japanese = "1.20141219.5"
encoding-index-tradchinese = "1.20141219.5"
encoding-index-singlebyte = "1.20141219.5"
encoding_index_tests = "0.1.4"
clear_on_drop = "0.2.4"
serde_test = "1.0.115"
ghost = "0.1.2"
diff = "0.1.12"
zstd-safe = "2.0.5"
ena = "0.14.0"
tendril = "0.4.1"
thread-id = "3.3.0"
proptest = "0.10.1"
console_error_panic_hook = "0.1.6"
aesni = "0.9.0"
twox-hash = "1.5.0"
futf = "0.1.4"
mac = "0.1.1"
annotate-snippets = "0.9.0"
predicates-core = "1.0.0"
zstd = "0.5.3"
predicates-tree = "1.0.0"
treeline = "0.1.0"
tower-load = "0.3.0"
markup5ever = "0.10.0"
num_enum = "0.5.1"
num_enum_derive = "0.5.1"
unsigned-varint = "0.5.0"
hkdf = "0.9.0"
unsafe-any = "0.4.2"
blake2 = "0.9.0"
html5ever = "0.25.1"
typemap = "0.3.3"
inventory = "0.1.9"
inventory-impl = "0.1.9"
rusty-fork = "0.3.0"
loom = "0.3.5"
rusoto_signature = "0.45.0"
bitvec = "0.18.1"
tower-make = "0.3.0"
xdg = "2.2.0"
rustc-hex = "2.1.0"
compiler_builtins = "0.1.35"
uint = "0.8.5"
simple_asn1 = "0.4.1"
yansi = "0.5.0"
seahash = "4.0.1"
serde_ignored = "0.1.2"
strip-ansi-escapes = "0.1.0"
event-listener = "2.4.0"
rust-ini = "0.15.3"
wayland-sys = "0.27.0"
opener = "0.4.1"
slog-scope = "4.3.0"
clicolors-control = "1.0.1"
config = "0.10.1"
rpassword = "5.0.0"
lzma-sys = "0.1.16"
tonic = "0.3.1"
antidote = "1.0.0"
derive_builder = "0.9.0"
derive_builder_core = "0.9.0"
stdweb = "0.4.20"
tower-ready-cache = "0.3.1"
impl-serde = "0.3.1"
jsonwebtoken = "7.2.0"
tokio-service = "0.1.0"
tonic-build = "0.3.1"
bs58 = "0.3.1"
base-x = "0.2.6"
tower-balance = "0.3.0"
xz2 = "0.1.6"
gl_generator = "0.14.0"
slog-term = "2.6.0"
generator = "0.6.21"
radium = "0.3.0"
fixed-hash = "0.6.1"
block-cipher = "0.8.0"
rustyline = "6.2.0"
wayland-client = "0.27.0"
wayland-scanner = "0.27.0"
async-channel = "1.4.2"
raw-window-handle = "0.3.3"
async-compression = "0.3.5"
wayland-protocols = "0.27.0"
wasm-bindgen-test = "0.3.17"
open = "1.4.0"
wayland-commons = "0.27.0"
snafu = "0.6.8"
snafu-derive = "0.6.8"
wasm-bindgen-test-macro = "0.3.17"
assert_cmd = "1.0.1"
futures-lite = "1.1.0"
dashmap = "3.11.10"
winit = "0.22.2"
typed-arena = "2.0.1"
if_chain = "1.0.0"
rustfix = "0.5.1"
slog-async = "2.5.0"
vergen = "3.1.0"
scroll_derive = "0.10.2"
trybuild = "1.0.33"
psm = "0.1.11"
scroll = "0.10.1"
jemallocator = "0.3.2"
anymap = "0.12.1"
stacker = "0.1.11"
mach = "0.3.2"
jsonrpc-server-utils = "14.2.0"
euclid = "0.22.1"
derive-new = "0.5.8"
fern = "0.6.0"
parity-wasm = "0.42.1"
chunked_transfer = "1.2.0"
atomic-waker = "1.0.0"
string_cache_shared = "0.3.0"
jsonrpc-derive = "14.2.2"
jsonrpc-pubsub = "14.2.0"
blake2-rfc = "0.2.18"
actix = "0.9.0"
byte-slice-cast = "0.3.5"
primitive-types = "0.7.2"
ipnetwork = "0.17.0"
actix_derive = "0.5.0"
ipconfig = "0.2.2"
crypto-hash = "0.3.4"
platforms = "0.2.1"
stb_truetype = "0.3.1"
protobuf-codegen = "2.17.0"
rusqlite = "0.24.0"
inflate = "0.4.5"
dlib = "0.4.2"
x25519-dalek = "1.1.0"
stdweb-internal-macros = "0.2.9"
secp256k1 = "0.19.0"
prettytable-rs = "0.8.0"
rusoto_s3 = "0.45.0"
stdweb-derive = "0.5.3"
stdweb-internal-runtime = "0.1.5"
git2-curl = "0.14.1"
fallible-streaming-iterator = "0.1.9"
discard = "1.0.4"
ref-cast = "1.0.2"
ref-cast-impl = "1.0.2"
serde-hjson = "0.9.1"
sysinfo = "0.15.1"
c_linked_list = "1.1.1"
ordermap = "0.4.2"
jsonrpc-client-transports = "14.2.1"
termion = "1.5.5"
parity-scale-codec = "1.3.4"
rust-crypto = "0.2.36"
postgres-protocol = "0.5.2"
rental = "0.5.5"
unindent = "0.1.6"
rental-impl = "0.5.5"
smithay-client-toolkit = "0.11.0"
jsonrpc-core-client = "14.2.0"
fst = "0.4.4"
goblin = "0.2.3"
tokio-core = "0.1.17"
xcb = "0.9.0"
bigdecimal = "0.2.0"
humansize = "1.1.0"
async-attributes = "1.1.1"
ctr = "0.5.0"
hdrhistogram = "7.1.0"
im-rc = "15.0.0"
line_drawing = "0.8.0"
dirs-sys-next = "0.1.0"
get_if_addrs = "0.5.3"
raw-cpuid = "8.1.1"
nalgebra = "0.22.0"
wincolor = "1.0.3"
chalk-ir = "0.26.0"
chalk-derive = "0.26.0"
chalk-solve = "0.26.0"
futures_codec = "0.4.1"
serde_with_macros = "1.1.0"
pq-sys = "0.4.6"
linked_hash_set = "0.1.4"
serde_with = "1.4.0"
core-graphics = "0.22.0"
rustc-ap-rustc_lexer = "677.0.0"
tokio-named-pipes = "0.1.0"
whoami = "0.9.0"
parity-multiaddr = "0.9.2"
andrew = "0.3.0"
rust_decimal = "1.7.0"
tokio-process = "0.2.5"
x11-dl = "2.18.5"
rmp = "0.8.9"
ws = "0.9.1"
wast = "23.0.0"
cbindgen = "0.14.4"
chrono-tz = "0.5.3"
unicode-script = "0.5.2"
aes-ctr = "0.4.0"
signature = "1.2.2"
syslog = "5.0.0"
parse-zoneinfo = "0.3.0"
dbus = "0.8.4"
dirs-next = "1.0.1"
snap = "1.0.1"
parity-tokio-ipc = "0.7.0"
migrations_internals = "1.4.1"
hex-literal = "0.3.1"
leb128 = "0.2.4"
indoc = "1.0.2"
jni-sys = "0.3.0"
lrpc-macros = "1.0.0"
impl-codec = "0.4.2"
lrpc = "1.0.0"
plain = "0.2.3"
memory_units = "0.4.0"
getset = "0.1.1"
futures-core-preview = "0.2.3"
miniz-sys = "0.1.12"
ntapi = "0.3.4"
rustc-rayon = "0.3.0"
rustc-rayon-core = "0.3.0"
alga = "0.9.3"
measureme = "0.7.1"
lsp-types = "0.80.0"
cocoa = "0.23.0"
termize = "0.1.1"
target-lexicon = "0.11.0"
rustc_tools_util = "0.2.0"
fsevent = "2.0.2"
fsevent-sys = "3.0.2"
os_info = "2.0.8"
hmac-drbg = "0.3.0"
state = "0.4.1"
simple_logger = "1.9.0"
hex-literal-impl = "0.2.2"
secrecy = "0.7.0"
users = "0.10.0"
blake2s_simd = "0.5.10"
slog-json = "2.3.0"
indoc-impl = "0.3.6"
libsecp256k1 = "0.3.5"
log4rs = "0.13.0"
ed25519 = "1.0.1"
chalk-engine = "0.26.0"
cargo-lock = "4.0.1"
unicode_categories = "0.1.1"
brotli-decompressor = "2.3.1"
log-mdc = "0.1.0"
deunicode = "1.1.1"
metrics = "0.12.1"
metrics-core = "0.5.2"
futures-channel-preview = "0.2.2"
ndarray = "0.13.1"
alloc-no-stdlib = "2.0.1"
rls-span = "0.5.2"
migrations_macros = "1.4.2"
futures-util-preview = "0.2.2"
docopt = "1.1.0"
jsonrpc-ipc-server = "14.2.0"
multihash = "0.11.4"
rmp-serde = "0.14.4"
libflate_lz77 = "1.0.0"
wepoll-sys-stjepang = "1.0.6"
tokio-postgres = "0.5.5"
diesel_migrations = "1.4.0"
rand_distr = "0.3.0"
khronos_api = "3.1.0"
tokio-native-tls = "0.1.0"
async-tls = "0.9.0"
alloc-stdlib = "0.2.1"
polonius-engine = "0.12.1"
libdbus-sys = "0.2.1"
datafrog = "2.0.1"
gfx-hal = "0.6.0"
objc = "0.2.7"
postgres-types = "0.1.2"
x11-clipboard = "0.5.1"
codespan-reporting = "0.9.5"
normalize-line-endings = "0.3.0"
rls-data = "0.19.0"
async-native-tls = "0.3.3"
wasm-timer = "0.2.5"
log_settings = "0.1.2"
punycode = "0.4.1"
hyperx = "1.1.0"
unicode-security = "0.0.5"
numtoa = "0.2.3"
slog-stdlog = "4.0.0"
dialoguer = "0.6.2"
x11 = "2.18.2"
rustc-ap-rustc_errors = "677.0.0"
phf_macros = "0.8.0"
shell-words = "1.0.0"
rustc-ap-rustc_data_structures = "677.0.0"
protoc = "2.17.0"
smol_str = "0.1.16"
malloc_buf = "1.0.0"
pear_codegen = "0.1.4"
pear = "0.1.4"
rustc-ap-rustc_target = "677.0.0"
assert_matches = "1.3.0"
ethbloom = "0.9.2"
block = "0.1.6"
generational-arena = "0.2.8"
tera = "1.5.0"
tokio-test = "0.2.1"
block-modes = "0.6.1"
hyper-openssl = "0.8.0"
ammonia = "3.1.0"
unic-char-range = "0.9.0"
redis = "0.17.0"
unic-char-property = "0.9.0"
chrono-humanize = "0.0.11"
unic-common = "0.9.0"
unic-ucd-version = "0.9.0"
poly1305 = "0.6.0"
secp256k1-sys = "0.3.0"
snow = "0.7.1"
rlp = "0.4.5"
os_str_bytes = "2.3.2"
err-derive = "0.2.4"
enum_primitive = "0.1.1"
rustc-ap-rustc_macros = "677.0.0"
fancy-regex = "0.3.5"
gfx-backend-empty = "0.6.0"
slug = "0.1.4"
rocket_codegen = "0.4.5"
calloop = "0.6.4"
assert_approx_eq = "1.1.0"
xi-unicode = "0.2.1"
libp2p-core = "0.21.0"
sqlformat = "0.1.0"
rustc-ap-rustc_index = "677.0.0"
arbitrary = "0.4.6"
tokio-retry = "0.2.0"
os_pipe = "0.9.2"
hibitset = "0.6.3"
typetag = "0.1.5"
rocket_http = "0.4.5"
attohttpc = "0.15.0"
typetag-impl = "0.1.5"
rustc-ap-rustc_span = "677.0.0"
rustc-ap-rustc_session = "677.0.0"
rustc-ap-rustc_feature = "677.0.0"
uname = "0.1.1"
rustc-ap-rustc_fs_util = "677.0.0"
soketto = "0.4.2"
rustc-ap-rustc_parse = "677.0.0"
atom = "0.3.5"
rustc-ap-rustc_ast_pretty = "677.0.0"
multistream-select = "0.8.2"
rustc-ap-rustc_ast = "677.0.0"
yamux = "0.4.9"
mdbook = "0.4.2"
nohash-hasher = "0.2.0"
unic-ucd-segment = "0.9.0"
chacha20poly1305 = "0.5.1"
asn1_der = "0.7.1"
unic-segment = "0.9.0"
more-asserts = "0.2.1"
crossterm = "0.17.7"
elasticlunr-rs = "2.3.9"
assert-json-diff = "1.1.0"
minifier = "0.0.36"
macro-utils = "0.1.3"
chacha20 = "0.5.0"
ethereum-types = "0.9.2"
redox_termios = "0.1.1"
ash = "0.31.0"
protoc-rust = "2.17.0"
rocket = "0.4.5"
stream-cancel = "0.6.1"
rw-stream-sink = "0.2.1"
sys-info = "0.7.0"
evmap = "10.0.2"
asn1_der_derive = "0.1.2"
postgres = "0.17.5"
debugid = "0.7.2"
lexical = "5.2.0"
enumset = "1.0.1"
built = "0.4.3"
xml5ever = "0.16.1"
bson = "1.1.0"
cesu8 = "1.1.0"
httpdate = "0.3.2"
impl-rlp = "0.2.1"
rusoto_sts = "0.45.0"
enumset_derive = "0.5.0"
android_log-sys = "0.2.0"
gfx-backend-vulkan = "0.6.1"
pathdiff = "0.2.0"
tower-test = "0.3.0"
color-backtrace = "0.4.2"
rustc-ap-rustc_attr = "677.0.0"
globwalk = "0.8.0"
quanta = "0.6.4"
devise = "0.2.0"
devise_core = "0.2.0"
devise_codegen = "0.2.0"
rustc-ap-rustc_ast_passes = "677.0.0"
rustc-ap-rustc_expand = "677.0.0"
quicksink = "0.1.2"
libp2p = "0.24.0"
boxfnonce = "0.1.1"
jni = "0.17.0"
k8s-openapi = "0.9.0"
compiletest_rs = "0.5.0"
insta = "0.16.1"
brotli = "3.3.0"
ripemd160 = "0.9.1"
racer = "2.1.38"
byte-unit = "4.0.9"
tiny-bip39 = "0.7.3"
libp2p-swarm = "0.21.0"
gumdrop_derive = "0.8.0"
gumdrop = "0.8.0"
procfs = "0.8.0"
integer-encoding = "2.0.0"
quine-mc_cluskey = "0.2.4"
rgb = "0.8.25"
libp2p-core-derive = "0.20.2"
ron = "0.6.1"
errno-dragonfly = "0.1.1"
exitcode = "1.1.2"
tiny_http = "0.7.0"
serde_derive_internals = "0.25.0"
scan_fmt = "0.2.5"
libp2p-tcp = "0.21.0"
glutin = "0.24.1"
quickcheck_macros = "0.9.1"
sentry-types = "0.19.1"
lyon_geom = "0.16.0"
